@@ -15,10 +15,7 @@ import com.powsybl.computation.CompletableFutureTask;
 import com.powsybl.computation.ComputationManager;
 import com.powsybl.contingency.ContingenciesProvider;
 import com.powsybl.contingency.Contingency;
-import com.powsybl.iidm.network.Branch;
-import com.powsybl.iidm.network.Network;
-import com.powsybl.iidm.network.Switch;
-import com.powsybl.iidm.network.TieLine;
+import com.powsybl.iidm.network.*;
 import com.powsybl.loadflow.LoadFlowParameters;
 import com.powsybl.loadflow.LoadFlowResult;
 import com.powsybl.math.matrix.MatrixFactory;
@@ -31,6 +28,7 @@ import com.powsybl.openloadflow.lf.LoadFlowEngine;
 import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.network.impl.*;
 import com.powsybl.openloadflow.network.util.ActivePowerDistribution;
+import com.powsybl.openloadflow.util.Lists2;
 import com.powsybl.openloadflow.util.PerUnit;
 import com.powsybl.openloadflow.util.Reports;
 import com.powsybl.security.*;
@@ -38,6 +36,7 @@ import com.powsybl.security.condition.AllViolationCondition;
 import com.powsybl.security.condition.AnyViolationCondition;
 import com.powsybl.security.condition.AtLeastOneViolationCondition;
 import com.powsybl.security.condition.TrueCondition;
+import com.powsybl.security.limitreduction.LimitReduction;
 import com.powsybl.security.monitor.StateMonitor;
 import com.powsybl.security.monitor.StateMonitorIndex;
 import com.powsybl.security.results.*;
@@ -47,8 +46,9 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.*;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -83,20 +83,19 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
         this.reportNode = Objects.requireNonNull(reportNode);
     }
 
+    protected abstract LoadFlowModel getLoadFlowModel();
+
     protected static SecurityAnalysisResult createNoResult() {
         return new SecurityAnalysisResult(new LimitViolationsResult(Collections.emptyList()), LoadFlowResult.ComponentResult.Status.FAILED, Collections.emptyList());
     }
 
     public CompletableFuture<SecurityAnalysisReport> run(String workingVariantId, SecurityAnalysisParameters securityAnalysisParameters,
                                                          ContingenciesProvider contingenciesProvider, ComputationManager computationManager,
-                                                         List<OperatorStrategy> operatorStrategies, List<Action> actions) {
+                                                         List<OperatorStrategy> operatorStrategies, List<Action> actions, List<LimitReduction> limitReductions) {
         Objects.requireNonNull(workingVariantId);
         Objects.requireNonNull(securityAnalysisParameters);
         Objects.requireNonNull(contingenciesProvider);
-        return CompletableFutureTask.runAsync(() -> {
-            network.getVariantManager().setWorkingVariant(workingVariantId);
-            return runSync(securityAnalysisParameters, contingenciesProvider, operatorStrategies, actions);
-        }, computationManager.getExecutor());
+        return CompletableFutureTask.runAsync(() -> runSync(securityAnalysisParameters, contingenciesProvider, operatorStrategies, actions, limitReductions, workingVariantId, computationManager.getExecutor()), computationManager.getExecutor());
     }
 
     protected abstract ReportNode createSaRootReportNode();
@@ -106,7 +105,8 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
     protected abstract P createParameters(LoadFlowParameters lfParameters, OpenLoadFlowParameters lfParametersExt, boolean breakers);
 
     SecurityAnalysisReport runSync(SecurityAnalysisParameters securityAnalysisParameters, ContingenciesProvider contingenciesProvider,
-                                   List<OperatorStrategy> operatorStrategies, List<Action> actions) {
+                                   List<OperatorStrategy> operatorStrategies, List<Action> actions, List<LimitReduction> limitReductions,
+                                   String workingVariantId, Executor executor) throws ExecutionException {
         var saReportNode = createSaRootReportNode();
 
         Stopwatch stopwatch = Stopwatch.createStarted();
@@ -114,6 +114,14 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
         LoadFlowParameters lfParameters = securityAnalysisParameters.getLoadFlowParameters();
         OpenLoadFlowParameters lfParametersExt = OpenLoadFlowParameters.get(securityAnalysisParameters.getLoadFlowParameters());
         OpenSecurityAnalysisParameters securityAnalysisParametersExt = OpenSecurityAnalysisParameters.getOrDefault(securityAnalysisParameters);
+
+        network.getVariantManager().setWorkingVariant(workingVariantId);
+
+        // load contingencies
+        List<Contingency> contingencies = contingenciesProvider.getContingencies(network);
+
+        LOGGER.info("Running {} security analysis on {} contingencies on {} threads",
+                getLoadFlowModel() == LoadFlowModel.AC ? "AC" : "DC", contingencies.size(), securityAnalysisParametersExt.getThreadCount());
 
         // check actions validity
         checkActions(network, actions);
@@ -132,8 +140,6 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
         // tie lines and three windings transformers missing.
         findAllBranchesToClose(network, actions, topoConfig);
 
-        // load contingencies
-        List<Contingency> contingencies = contingenciesProvider.getContingencies(network);
         // try to find all switches impacted by at least one contingency and for each contingency the branches impacted
         PropagatedContingencyCreationParameters creationParameters = new PropagatedContingencyCreationParameters()
                 .setContingencyPropagation(securityAnalysisParametersExt.isContingencyPropagation())
@@ -141,23 +147,228 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
                 .setSlackDistributionOnConformLoad(lfParameters.getBalanceType() == LoadFlowParameters.BalanceType.PROPORTIONAL_TO_CONFORM_LOAD)
                 .setHvdcAcEmulation(lfParameters.isHvdcAcEmulation());
 
-        List<PropagatedContingency> propagatedContingencies = PropagatedContingency.createList(network, contingencies, topoConfig, creationParameters);
+        SecurityAnalysisResult finalResult;
+        if (securityAnalysisParametersExt.getThreadCount() == 1) {
+            List<PropagatedContingency> propagatedContingencies = PropagatedContingency.createList(network, contingencies, topoConfig, creationParameters);
 
-        var parameters = createParameters(lfParameters, lfParametersExt, topoConfig.isBreaker());
+            var parameters = createParameters(lfParameters, lfParametersExt, topoConfig.isBreaker());
 
-        // create networks including all necessary switches
-        try (LfNetworkList lfNetworks = Networks.load(network, parameters.getNetworkParameters(), topoConfig, saReportNode)) {
-            // run simulation on largest network
-            SecurityAnalysisResult result = lfNetworks.getLargest().filter(n -> n.getValidity() == LfNetwork.Validity.VALID)
-                    .map(largestNetwork -> runSimulations(largestNetwork, propagatedContingencies, parameters, securityAnalysisParameters, operatorStrategies, actions))
-                    .orElse(createNoResult());
+            // create networks including all necessary switches
+            try (LfNetworkList lfNetworks = Networks.load(network, parameters.getNetworkParameters(), topoConfig, saReportNode)) {
+                finalResult = runSimulationsOnAllComponents(lfNetworks, propagatedContingencies, parameters, securityAnalysisParameters, operatorStrategies, actions, limitReductions, lfParameters);
+            }
 
-            stopwatch.stop();
-            LOGGER.info("Security analysis {} in {} ms", Thread.currentThread().isInterrupted() ? "cancelled" : "done",
-                    stopwatch.elapsed(TimeUnit.MILLISECONDS));
+        } else {
+            var contingenciesPartitions = Lists2.partition(contingencies, securityAnalysisParametersExt.getThreadCount());
 
-            return new SecurityAnalysisReport(result);
+            // we pre-allocate the results so that threads can set result in a stable order (using the partition number)
+            // so that we always get results in the same order whatever threads completion order is.
+            List<SecurityAnalysisResult> partitionResults = Collections.synchronizedList(new ArrayList<>(Collections.nCopies(contingenciesPartitions.size(), createNoResult()))); // init to no result in case of cancel
+            List<LfNetworkList> lfNetworksList = new ArrayList<>();
+
+            boolean oldAllowVariantMultiThreadAccess = network.getVariantManager().isVariantMultiThreadAccessAllowed();
+            network.getVariantManager().allowVariantMultiThreadAccess(true);
+            try {
+                Lock networkLock = new ReentrantLock();
+                List<CompletableFuture<Void>> futures = new ArrayList<>();
+                for (int i = 0; i < contingenciesPartitions.size(); i++) {
+                    final int partitionNum = i;
+                    var contingenciesPartition = contingenciesPartitions.get(i);
+                    futures.add(CompletableFutureTask.runAsync(() -> {
+
+                        var partitionTopoConfig = new LfTopoConfig(topoConfig);
+
+                        //  we have to pay attention with IIDM network multi threading even when allowVariantMultiThreadAccess is set:
+                        //    - variant cloning and removal is not thread safe
+                        //    - we cannot read or write on an exising variant while another thread clone or remove a variant
+                        //    - be aware that even after LF network loading, though LF network we get access to original IIDM
+                        //      variant (for instance to get reactive capability curve), so allowVariantMultiThreadAccess mode
+                        //      is absolutely required
+                        //  so in order to be thread safe, we need to:
+                        //    - lock LF network creation (which create a working variant, see {@code LfNetworkList})
+                        //    - delay {@code LfNetworkList} closing (which remove a working variant) out of worker thread
+                        LfNetworkList lfNetworks;
+                        List<PropagatedContingency> propagatedContingencies;
+                        P parameters;
+                        networkLock.lock();
+                        try {
+                            network.getVariantManager().setWorkingVariant(workingVariantId);
+
+                            propagatedContingencies = PropagatedContingency.createList(network, contingenciesPartition, partitionTopoConfig, creationParameters);
+
+                            parameters = createParameters(lfParameters, lfParametersExt, partitionTopoConfig.isBreaker());
+
+                            // create networks including all necessary switches
+                            lfNetworks = Networks.load(network, parameters.getNetworkParameters(), partitionTopoConfig, saReportNode);
+                            lfNetworksList.add(0, lfNetworks); // FIXME to workaround variant removal bug, to fix in core
+                        } finally {
+                            networkLock.unlock();
+                        }
+
+                        // run simulation on largest network
+                        partitionResults.set(partitionNum, runSimulationsOnAllComponents(
+                                lfNetworks, propagatedContingencies, parameters, securityAnalysisParameters, operatorStrategies, actions, limitReductions, lfParameters));
+
+                        return null;
+                    }, executor));
+                }
+
+                try {
+                    CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
+                            .get(); // we need to use get instead of join to get an interruption exception
+                } catch (InterruptedException e) {
+                    // also interrupt worker threads
+                    for (var future : futures) {
+                        future.cancel(true);
+                    }
+                    Thread.currentThread().interrupt();
+                }
+            } finally {
+                network.getVariantManager().allowVariantMultiThreadAccess(oldAllowVariantMultiThreadAccess);
+            }
+
+            for (var lfNetworks : lfNetworksList) {
+                lfNetworks.close();
+            }
+
+            // we just need to merge post contingency and operator strategy results, all pre contingency are the same
+            List<PostContingencyResult> postContingencyResults = new ArrayList<>();
+            List<OperatorStrategyResult> operatorStrategyResults = new ArrayList<>();
+            for (var partitionResult : partitionResults) {
+                postContingencyResults.addAll(partitionResult.getPostContingencyResults());
+                operatorStrategyResults.addAll(partitionResult.getOperatorStrategyResults());
+            }
+            finalResult = new SecurityAnalysisResult(partitionResults.get(0).getPreContingencyResult(), postContingencyResults, operatorStrategyResults);
         }
+
+        stopwatch.stop();
+        LOGGER.info("Security analysis {} in {} ms", Thread.currentThread().isInterrupted() ? "cancelled" : "done",
+                stopwatch.elapsed(TimeUnit.MILLISECONDS));
+
+        return new SecurityAnalysisReport(finalResult);
+    }
+
+    SecurityAnalysisResult runSimulationsOnAllComponents(LfNetworkList networks, List<PropagatedContingency> propagatedContingencies, P parameters,
+                                                         SecurityAnalysisParameters securityAnalysisParameters, List<OperatorStrategy> operatorStrategies,
+                                                         List<Action> actions, List<LimitReduction> limitReductions, LoadFlowParameters lfParameters) {
+        // run simulation on main connected component network first
+        SecurityAnalysisResult result = networks.getList().stream().filter(n -> n.getValidity().equals(LfNetwork.Validity.VALID) && n.getNumCC() == ComponentConstants.MAIN_NUM)
+                .findFirst()
+                .map(n -> runSimulations(n, propagatedContingencies, parameters, securityAnalysisParameters, operatorStrategies, actions, limitReductions))
+                .orElse(createNoResult());
+
+        List<PostContingencyResult> postContingencyResults = result.getPostContingencyResults();
+        List<OperatorStrategyResult> operatorStrategyResults = result.getOperatorStrategyResults();
+        NetworkResult mergedPreContingencyNetworkResult = result.getPreContingencyResult().getNetworkResult();
+        List<LimitViolation> preContingenctViolations = result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations();
+
+        if (lfParameters.getConnectedComponentMode() == LoadFlowParameters.ConnectedComponentMode.ALL) {
+            Map<String, PostContingencyResult> postContingencyResultMap = new LinkedHashMap<>();
+            Map<String, OperatorStrategyResult> operatorStrategyResultMap = new LinkedHashMap<>();
+            postContingencyResults.forEach(r -> postContingencyResultMap.put(r.getContingency().getId(), r));
+            operatorStrategyResults.forEach(r -> operatorStrategyResultMap.put(r.getOperatorStrategy().getId(), r));
+
+            // Ensure the lists are writable and can be extended
+            preContingenctViolations = new ArrayList<>(preContingenctViolations);
+
+            List<LfNetwork> networkToSimulate = networks.getList().stream()
+                    .filter(n -> n.getNumCC() != ComponentConstants.MAIN_NUM && n.getValidity().equals(LfNetwork.Validity.VALID)).toList();
+            for (LfNetwork n : networkToSimulate) {
+                SecurityAnalysisResult resultOtherComponent = runSimulations(n, propagatedContingencies, parameters, securityAnalysisParameters, operatorStrategies, actions, limitReductions);
+
+                // Merge into first result
+                // PreContingency results first
+                preContingenctViolations.addAll(resultOtherComponent.getPreContingencyResult().getLimitViolationsResult().getLimitViolations());
+                mergedPreContingencyNetworkResult = mergeNetworkResult(mergedPreContingencyNetworkResult, resultOtherComponent.getPreContingencyResult().getNetworkResult());
+
+                // PostContingency and OperatorStrategies results
+                mergeSecurityAnalysisResult(resultOtherComponent, postContingencyResultMap, operatorStrategyResultMap, n.getNumCC());
+            }
+            postContingencyResults = postContingencyResultMap.values().stream().toList();
+            operatorStrategyResults = operatorStrategyResultMap.values().stream().toList();
+        }
+        PreContingencyResult mergedPrecontingencyResult =
+                new PreContingencyResult(result.getPreContingencyResult().getStatus(),
+                        new LimitViolationsResult(preContingenctViolations),
+                        mergedPreContingencyNetworkResult);
+        return new SecurityAnalysisResult(mergedPrecontingencyResult, postContingencyResults, operatorStrategyResults);
+    }
+
+    void mergeSecurityAnalysisResult(SecurityAnalysisResult resultToMerge, Map<String, PostContingencyResult> postContingencyResults,
+                                     Map<String, OperatorStrategyResult> operatorStrategyResults, int connectedComponentNum) {
+        resultToMerge.getPostContingencyResults().forEach(postContingencyResult -> {
+            String contingencyId = postContingencyResult.getContingency().getId();
+            PostContingencyResult originalResult = postContingencyResults.get(contingencyId);
+
+            if (originalResult != null) {
+                warnDifferentStatus(originalResult.getStatus(), postContingencyResult.getStatus(), connectedComponentNum, "post contingency", postContingencyResult.getContingency().getId());
+                NetworkResult mergedNetworkResult = mergeNetworkResult(originalResult.getNetworkResult(), postContingencyResult.getNetworkResult());
+                List<LimitViolation> violations = new ArrayList<>(postContingencyResult.getLimitViolationsResult().getLimitViolations());
+                violations.addAll(originalResult.getLimitViolationsResult().getLimitViolations());
+
+                PostContingencyResult mergedPostContingencyResult =
+                        new PostContingencyResult(originalResult.getContingency(), originalResult.getStatus(),
+                                new LimitViolationsResult(violations), mergedNetworkResult, originalResult.getConnectivityResult());
+
+                postContingencyResults.put(contingencyId, mergedPostContingencyResult);
+            } else {
+                postContingencyResults.put(contingencyId, postContingencyResult);
+            }
+        });
+
+        resultToMerge.getOperatorStrategyResults().forEach(operatorStrategyResult -> {
+            String strategyId = operatorStrategyResult.getOperatorStrategy().getId();
+            OperatorStrategyResult originalResult = operatorStrategyResults.get(strategyId);
+            if (originalResult != null) {
+                List<OperatorStrategyResult.ConditionalActionsResult> conditionalActionsResults = new ArrayList<>();
+
+                operatorStrategyResult.getConditionalActionsResults().forEach(conditionalActionsResult -> {
+                    Optional<OperatorStrategyResult.ConditionalActionsResult> originalRes = originalResult.getConditionalActionsResults().stream()
+                            .filter(originalConditionalActionResult -> originalConditionalActionResult.getConditionalActionsId().equals(conditionalActionsResult.getConditionalActionsId()))
+                            .findAny();
+                    if (originalRes.isPresent()) {
+                        warnDifferentStatus(originalRes.get().getStatus(), conditionalActionsResult.getStatus(), connectedComponentNum, "conditional actions", conditionalActionsResult.getConditionalActionsId());
+                        NetworkResult mergedNetworkResult = mergeNetworkResult(originalRes.get().getNetworkResult(), conditionalActionsResult.getNetworkResult());
+                        List<LimitViolation> violations = new ArrayList<>(conditionalActionsResult.getLimitViolationsResult().getLimitViolations());
+                        violations.addAll(originalResult.getLimitViolationsResult().getLimitViolations());
+
+                        OperatorStrategyResult.ConditionalActionsResult mergedConditionalActionResult
+                                = new OperatorStrategyResult.ConditionalActionsResult(conditionalActionsResult.getConditionalActionsId(),
+                                conditionalActionsResult.getStatus(), new LimitViolationsResult(violations), mergedNetworkResult);
+                        conditionalActionsResults.add(mergedConditionalActionResult);
+
+                    } else {
+                        conditionalActionsResults.add(conditionalActionsResult);
+                    }
+                });
+                operatorStrategyResults.put(strategyId, new OperatorStrategyResult(originalResult.getOperatorStrategy(), conditionalActionsResults));
+            } else {
+                operatorStrategyResults.put(strategyId, operatorStrategyResult);
+            }
+        });
+    }
+
+    void warnDifferentStatus(PostContingencyComputationStatus mainStatus, PostContingencyComputationStatus subComponentStatus, int subComponentNum, String stage, String stageId) {
+        if (mainStatus != subComponentStatus) {
+            LOGGER.warn("Component {} {} {} result being merged has status {} while main connected component has status {}." +
+                    " Status of component {} will not be represented in the output.",
+                subComponentNum, stage, stageId, subComponentStatus, mainStatus, subComponentNum);
+        }
+    }
+
+    private static <T> ArrayList<T> ensureMutable(List<T> orig) {
+        return orig instanceof ArrayList<T> arrayList ? arrayList : new ArrayList<>(orig);
+    }
+
+    static NetworkResult mergeNetworkResult(NetworkResult source, NetworkResult target) {
+        // Copy the lists if they are not writable
+        ArrayList<BranchResult> branchResults = ensureMutable(source.getBranchResults());
+        ArrayList<ThreeWindingsTransformerResult> twtResults = ensureMutable(source.getThreeWindingsTransformerResults());
+        ArrayList<BusResult> busResults = ensureMutable(source.getBusResults());
+        branchResults.addAll(target.getBranchResults());
+        twtResults.addAll(target.getThreeWindingsTransformerResults());
+        busResults.addAll(target.getBusResults());
+        return new NetworkResult(branchResults, busResults, twtResults);
     }
 
     protected abstract PostContingencyComputationStatus postContingencyStatusFromLoadFlowResult(R result);
@@ -366,7 +577,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
             if (TerminalsConnectionAction.NAME.equals(action.getType())) {
                 TerminalsConnectionAction terminalsConnectionAction = (TerminalsConnectionAction) action;
                 if (terminalsConnectionAction.getSide().isEmpty() && !terminalsConnectionAction.isOpen()) {
-                    Branch branch = network.getBranch(terminalsConnectionAction.getElementId());
+                    Branch<?> branch = network.getBranch(terminalsConnectionAction.getElementId());
                     if (branch != null && !(branch instanceof TieLine) &&
                             !branch.getTerminal1().isConnected() && !branch.getTerminal2().isConnected()) {
                         // both terminals must be disconnected. If only one is connected, the branch is present
@@ -395,7 +606,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
 
     protected SecurityAnalysisResult runSimulations(LfNetwork lfNetwork, List<PropagatedContingency> propagatedContingencies, P acParameters,
                                                     SecurityAnalysisParameters securityAnalysisParameters, List<OperatorStrategy> operatorStrategies,
-                                                    List<Action> actions) {
+                                                    List<Action> actions, List<LimitReduction> limitReductions) {
         Map<String, Action> actionsById = indexActionsById(actions);
         Set<Action> neededActions = new HashSet<>(actionsById.size());
         Map<String, List<OperatorStrategy>> operatorStrategiesByContingencyId = indexOperatorStrategiesByContingencyId(propagatedContingencies, operatorStrategies, actionsById, neededActions);
@@ -416,7 +627,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
                     .run();
 
             boolean preContingencyComputationOk = preContingencyLoadFlowResult.isSuccess();
-            var preContingencyLimitViolationManager = new LimitViolationManager();
+            var preContingencyLimitViolationManager = new LimitViolationManager(limitReductions);
             List<PostContingencyResult> postContingencyResults = new ArrayList<>();
             var preContingencyNetworkResult = new PreContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension);
             List<OperatorStrategyResult> operatorStrategyResults = new ArrayList<>();
@@ -448,30 +659,38 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
                                 distributedMismatch(lfNetwork, lfContingency.getActivePowerLoss(), loadFlowParameters, openLoadFlowParameters);
 
                                 var postContingencyResult = runPostContingencySimulation(lfNetwork, context, propagatedContingency.getContingency(),
-                                        lfContingency, preContingencyLimitViolationManager,
-                                        securityAnalysisParameters.getIncreasedViolationsParameters(),
-                                        preContingencyNetworkResult, createResultExtension);
+                                                                                         lfContingency, preContingencyLimitViolationManager,
+                                                                                         securityAnalysisParameters.getIncreasedViolationsParameters(),
+                                                                                         preContingencyNetworkResult, createResultExtension, limitReductions);
                                 postContingencyResults.add(postContingencyResult);
 
                                 List<OperatorStrategy> operatorStrategiesForThisContingency = operatorStrategiesByContingencyId.get(lfContingency.getId());
                                 if (operatorStrategiesForThisContingency != null) {
-                                    // we have at least an operator strategy for this contingency.
+                                    // we have at least one operator strategy for this contingency.
                                     if (operatorStrategiesForThisContingency.size() == 1) {
+                                        // only one operator strategy, no need to do a complete save of network state,
+                                        // but need to set generators initialTargetP positions to the current (=postContingency) targetP
+                                        lfNetwork.setGeneratorsInitialTargetPToTargetP();
+                                        OperatorStrategy operatorStrategy = operatorStrategiesForThisContingency.get(0);
+                                        ReportNode osSimReportNode = Reports.createOperatorStrategySimulation(postContSimReportNode, operatorStrategy.getId());
+                                        lfNetwork.setReportNode(osSimReportNode);
                                         runActionSimulation(lfNetwork, context,
-                                                operatorStrategiesForThisContingency.get(0), preContingencyLimitViolationManager,
+                                                operatorStrategy, preContingencyLimitViolationManager,
                                                 securityAnalysisParameters.getIncreasedViolationsParameters(), lfActionById,
                                                 createResultExtension, lfContingency, postContingencyResult.getLimitViolationsResult(),
-                                                acParameters.getNetworkParameters())
+                                                acParameters.getNetworkParameters(), limitReductions)
                                                 .ifPresent(operatorStrategyResults::add);
                                     } else {
-                                        // save post contingency state for later restoration after action
+                                        // multiple operator strategies, save post contingency state for later restoration after action
                                         NetworkState postContingencyNetworkState = NetworkState.save(lfNetwork);
                                         for (OperatorStrategy operatorStrategy : operatorStrategiesForThisContingency) {
+                                            ReportNode osSimReportNode = Reports.createOperatorStrategySimulation(postContSimReportNode, operatorStrategy.getId());
+                                            lfNetwork.setReportNode(osSimReportNode);
                                             runActionSimulation(lfNetwork, context,
                                                     operatorStrategy, preContingencyLimitViolationManager,
                                                     securityAnalysisParameters.getIncreasedViolationsParameters(), lfActionById,
                                                     createResultExtension, lfContingency, postContingencyResult.getLimitViolationsResult(),
-                                                    acParameters.getNetworkParameters())
+                                                    acParameters.getNetworkParameters(), limitReductions)
                                                     .ifPresent(result -> {
                                                         operatorStrategyResults.add(result);
                                                         postContingencyNetworkState.restore();
@@ -490,7 +709,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
 
             return new SecurityAnalysisResult(
                     new PreContingencyResult(
-                            preContingencyLoadFlowResult.toComponentResultStatus(),
+                            preContingencyLoadFlowResult.toComponentResultStatus().status(),
                             new LimitViolationsResult(preContingencyLimitViolationManager.getLimitViolations()),
                             preContingencyNetworkResult.getBranchResults(), preContingencyNetworkResult.getBusResults(),
                             preContingencyNetworkResult.getThreeWindingsTransformerResults()),
@@ -502,13 +721,14 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
                                                                  LimitViolationManager preContingencyLimitViolationManager,
                                                                  SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
                                                                  Map<String, LfAction> lfActionById, boolean createResultExtension, LfContingency contingency,
-                                                                 LimitViolationsResult postContingencyLimitViolations, LfNetworkParameters networkParameters) {
+                                                                 LimitViolationsResult postContingencyLimitViolations, LfNetworkParameters networkParameters,
+                                                                 List<LimitReduction> limitReductions) {
         OperatorStrategyResult operatorStrategyResult = null;
 
         List<String> actionIds = checkCondition(operatorStrategy, postContingencyLimitViolations);
         if (!actionIds.isEmpty()) {
             operatorStrategyResult = runActionSimulation(network, context, operatorStrategy, actionIds, preContingencyLimitViolationManager,
-                    violationsParameters, lfActionById, createResultExtension, contingency, networkParameters);
+                    violationsParameters, lfActionById, createResultExtension, contingency, networkParameters, limitReductions);
         }
 
         return Optional.ofNullable(operatorStrategyResult);
@@ -517,17 +737,15 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
     protected PostContingencyResult runPostContingencySimulation(LfNetwork network, C context, Contingency contingency, LfContingency lfContingency,
                                                                  LimitViolationManager preContingencyLimitViolationManager,
                                                                  SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
-                                                                 PreContingencyNetworkResult preContingencyNetworkResult, boolean createResultExtension) {
-        LOGGER.info("Start post contingency '{}' simulation on network {}", lfContingency.getId(), network);
-        LOGGER.debug("Contingency '{}' impact on network {}: remove {} buses, remove {} branches, remove {} generators, shift {} shunts, shift {} loads",
-                lfContingency.getId(), network, lfContingency.getDisabledNetwork().getBuses(), lfContingency.getDisabledNetwork().getBranchesStatus(),
-                lfContingency.getLostGenerators(), lfContingency.getShuntsShift(), lfContingency.getLostLoads());
+                                                                 PreContingencyNetworkResult preContingencyNetworkResult, boolean createResultExtension,
+                                                                 List<LimitReduction> limitReductions) {
+        logPostContingencyStart(network, lfContingency);
 
         Stopwatch stopwatch = Stopwatch.createStarted();
 
         // restart LF on post contingency equation system
         PostContingencyComputationStatus status = runActionLoadFlow(context); // FIXME: change name.
-        var postContingencyLimitViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, violationsParameters);
+        var postContingencyLimitViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, limitReductions, violationsParameters);
         var postContingencyNetworkResult = new PostContingencyNetworkResult(network, monitorIndex, createResultExtension, preContingencyNetworkResult, contingency);
 
         if (status.equals(PostContingencyComputationStatus.CONVERGED)) {
@@ -539,8 +757,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
         }
 
         stopwatch.stop();
-        LOGGER.info("Post contingency '{}' simulation done on network {} in {} ms", lfContingency.getId(),
-                network, stopwatch.elapsed(TimeUnit.MILLISECONDS));
+        logPostContingencyEnd(network, lfContingency, stopwatch);
 
         var connectivityResult = new ConnectivityResult(lfContingency.getCreatedSynchronousComponentsCount(), 0,
                 lfContingency.getDisconnectedLoadActivePower() * PerUnit.SB,
@@ -555,12 +772,24 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
                 connectivityResult);
     }
 
+    protected static void logPostContingencyStart(LfNetwork network, LfContingency lfContingency) {
+        LOGGER.info("Start post contingency '{}' simulation on network {}", lfContingency.getId(), network);
+        LOGGER.debug("Contingency '{}' impact on network {}: remove {} buses, remove {} branches, remove {} generators, shift {} shunts, shift {} loads",
+                lfContingency.getId(), network, lfContingency.getDisabledNetwork().getBuses(), lfContingency.getDisabledNetwork().getBranchesStatus(),
+                lfContingency.getLostGenerators(), lfContingency.getShuntsShift(), lfContingency.getLostLoads());
+    }
+
+    protected static void logPostContingencyEnd(LfNetwork network, LfContingency lfContingency, Stopwatch stopwatch) {
+        LOGGER.info("Post contingency '{}' simulation done on network {} in {} ms", lfContingency.getId(),
+                network, stopwatch.elapsed(TimeUnit.MILLISECONDS));
+    }
+
     protected OperatorStrategyResult runActionSimulation(LfNetwork network, C context, OperatorStrategy operatorStrategy,
                                                          List<String> actionsIds,
                                                          LimitViolationManager preContingencyLimitViolationManager,
                                                          SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
                                                          Map<String, LfAction> lfActionById, boolean createResultExtension, LfContingency contingency,
-                                                         LfNetworkParameters networkParameters) {
+                                                         LfNetworkParameters networkParameters, List<LimitReduction> limitReductions) {
         LOGGER.info("Start operator strategy {} after contingency '{}' simulation on network {}", operatorStrategy.getId(),
                 operatorStrategy.getContingencyContext().getContingencyId(), network);
 
@@ -570,7 +799,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
         List<LfAction> operatorStrategyLfActions = actionsIds.stream()
                 .map(lfActionById::get)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         LfAction.apply(operatorStrategyLfActions, network, contingency, networkParameters);
 
@@ -578,7 +807,7 @@ public abstract class AbstractSecurityAnalysis<V extends Enum<V> & Quantity, E e
 
         // restart LF on post contingency and post actions equation system
         PostContingencyComputationStatus status = runActionLoadFlow(context);
-        var postActionsViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, violationsParameters);
+        var postActionsViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, limitReductions, violationsParameters);
         var postActionsNetworkResult = new PreContingencyNetworkResult(network, monitorIndex, createResultExtension);
 
         if (status.equals(PostContingencyComputationStatus.CONVERGED)) {
